...
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_Activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
...
    <!-- Back button to go back to main page -->
    <ImageButton
        android:id="@+id/buttonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
    <!-- Background music mute button -->
    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/muteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
     -->
    <RadioGroup
        android:id="@+id/choose_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

        <RadioButton
            android:id="@+id/animal_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <RadioButton
            android:id="@+id/fruits_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <RadioButton
            android:id="@+id/shapes_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
    -->
    <RadioGroup
        android:id="@+id/choose_gridsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

        <RadioButton
            android:id="@+id/size_34"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <RadioButton
            android:id="@+id/size_44"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <RadioButton
            android:id="@+id/size_45"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
    -->
    <RadioGroup
        android:id="@+id/choose_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

        <RadioButton
            android:id="@+id/timed_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <RadioButton
            android:id="@+id/moves_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <RadioButton
            android:id="@+id/free_mode"
            android:layout_width="0dp"
            android:checked="false"
...
    <!-- Button for starting the game activity-->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
